add enabled caching and others