@@ -2,6 +2,7 @@ package com.gad.msvc_customer.exception;
 
 import com.gad.msvc_customer.dto.DataResponse;
 import com.gad.msvc_customer.utils.UtilsMethods;
+import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
@@ -16,14 +17,42 @@ import static org.springframework.http.HttpStatus.*;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+    private static final String TEXT_FIELD = "field";
+    private static final String TEXT_MESSAGES = "messages";
     @ExceptionHandler(ConstraintViolationException.class)
     public ResponseEntity<DataResponse> handlerValidationException(ConstraintViolationException ex) {
-        List<String> errors = ex.getConstraintViolations() == null ?
-                Collections.singletonList(ex.getMessage()) :
-                ex.getConstraintViolations()
-                        .stream()
-                        .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
-                        .toList();
+        List<Map<String, Object>> errors;
+
+        if (ex.getConstraintViolations() == null) {
+            errors = List.of(Map.of(
+                    TEXT_FIELD, "unknown",
+                    TEXT_MESSAGES, List.of(ex.getMessage())
+            ));
+        } else {
+            errors = ex.getConstraintViolations()
+                    .stream()
+                    .collect(Collectors.groupingBy(
+                            violation -> {
+                                String path = violation.getPropertyPath().toString();
+                                int lastDot = path.lastIndexOf('.');
+                                return lastDot != -1 ? path.substring(lastDot + 1) : path;
+                            },
+                            LinkedHashMap::new,
+                            Collectors.mapping(
+                                    ConstraintViolation::getMessage,
+                                    Collectors.toList()
+                            )
+                    ))
+                    .entrySet()
+                    .stream()
+                    .map(entry -> {
+                        Map<String, Object> errorMap = new LinkedHashMap<>();
+                        errorMap.put(TEXT_FIELD, entry.getKey());
+                        errorMap.put(TEXT_MESSAGES, entry.getValue().stream().sorted().toList());
+                        return errorMap;
+                    })
+                    .toList();
+        }
 
         return ResponseEntity.badRequest()
                 .body(new DataResponse(BAD_REQUEST.value(),
@@ -54,10 +83,12 @@ public class GlobalExceptionHandler {
                     int index = fieldOrder.indexOf(e.getKey());
                     return index == -1 ? Integer.MAX_VALUE : index;
                 }))
-                .map(entry -> Map.of(
-                        "field", entry.getKey(),
-                        "messages", entry.getValue().stream().sorted().toList()
-                ))
+                .map(entry -> {
+                    Map<String, Object> errorMap = new LinkedHashMap<>();
+                    errorMap.put(TEXT_FIELD, entry.getKey());
+                    errorMap.put(TEXT_MESSAGES, entry.getValue().stream().sorted().toList());
+                    return errorMap;
+                })
                 .toList();
 
         return ResponseEntity.badRequest()
